# boilerplate-agent

./: .dockerignore  .env.example  .gitignore  AI-Agent-Boilerplate-NoDB.md  Dockerfile  RAG_IMPLEMENTATION_PLAN.md  RAG_IMPLEMENTATION_PLAN_EN.md  README.md  README_FINAL.md  README_FINAL_EN.md  docker-compose.yml  pyproject.toml  requirements.txt  user-query.sql
agents_core/config/: settings.py
agents_core/guardrails/: input_validation.py
agents_core/memory/: conversation_memory.py
agents_core/middleware/: rate_limiting.py
agents_core/monitoring/: error_tracking.py
agents_core/observability/: langfuse_client.py
agents_core/orchestrator/: agent.py
agents_core/schemas/: message.py
agents_core/tools/: advanced_tools.py  business_tools.py
agents_core/webhooks/: webhook_manager.py
apps/api/: main.py
tests/evals/: README.md  check_redis.py  check_workers.py  redis_celery_demo.py  start_optimized_workers.py  test_manual.py  test_system_complete.py
workers/celery_worker/: app.py  tasks.py
